# retina-cli

./: .gitignore  .replit  Cargo.toml  basic_retina.sqlite3  replit.nix  retina.sqlite3  suiwei.sqlite3
.cargo/: .global-cache
.cargo/registry/cache/index.crates.io-6f17d22bba15001f/: cc-1.1.14.crate  clap-3.1.6.crate  clap_derive-3.1.4.crate  clap_derive-4.5.8.crate  diesel-2.2.2.crate  diesel_derives-2.2.2.crate  diesel_table_macro_syntax-0.2.0.crate  dsl_auto_type-0.1.2.crate  h2-0.4.6.crate  hyper-rustls-0.27.2.crate  hyper-util-0.1.7.crate  libc-0.2.119.crate  os_str_bytes-6.0.0.crate  quote-1.0.15.crate  reqwest-0.12.7.crate  rustls-0.23.12.crate  rustls-pki-types-1.8.0.crate  rustls-webpki-0.102.6.crate  syn-1.0.86.crate
.cargo/registry/src/index.crates.io-6f17d22bba15001f/brotli-3.5.0/: .cargo_vcs_info.json
.cargo/registry/src/index.crates.io-6f17d22bba15001f/brotli-decompressor-2.5.1/: .cargo_vcs_info.json
.cargo/registry/src/index.crates.io-6f17d22bba15001f/cc-1.1.14/: .cargo_vcs_info.json
.cargo/registry/src/index.crates.io-6f17d22bba15001f/clap_derive-3.1.4/: .cargo_vcs_info.json
.cargo/registry/src/index.crates.io-6f17d22bba15001f/clap_derive-4.5.8/: .cargo_vcs_info.json
.cargo/registry/src/index.crates.io-6f17d22bba15001f/diesel-2.2.2/: .cargo_vcs_info.json  Cargo.toml
migrations/2024-08-02-115228_create_memories/: down.sql  up.sql
src/: cli.rs  lib.rs  main.rs  models.rs  retina.rs  schema.rs  show_posts.rs
src/cli/: detect.rs  mod.rs  report.rs
src/retina/: convert.rs  login.rs  mod.rs  send_fundus.rs
(+18 files in other folders)
