[package]
name = "retina-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
random_word = { version = "0.4.3", features = ["en"] }
diesel = { version = "2.2.2", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }